Fixing the landing page text alignment.

--- a/public/src/css/styles.less
+++ b/public/src/css/styles.less
@@ -99,7 +99,7 @@ p {
 // -------------------------
 
 .landing {
-  text-align: left;
+  text-align: center;
   display: inline-block;
   .title {
     margin-top: 50px;
@@ -124,10 +124,10 @@ p {
   }
 }
 
-.landing-header, .landing-last {
-  text-align: center;
-  display: inline-block;
-}
+// .landing-header, .landing-last {
+//   text-align: center;
+//   display: inline-block;
+// }
 
 .landing-body-right {
   text-align: right;
@@ -220,7 +220,7 @@ p {
 // Landing Page
 // -------------------------
 .landing {
-  text-align: left;
+  text-align: center;
   display: inline-block;
   .title {
     margin-top: 50px;
@@ -257,6 +257,10 @@ p {
     float: right;
     margin-left: 25px;
   }
+}
+
+.landing-body-left {
+  text-align: left;
 }
 
 .title {
